use Integer.valueOf and Integer.parseInt instead of new Integer()