@@ -39,7 +39,7 @@ public class WOThresholdColoredNumber extends WOComponent
             }
         }
 
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
     
     public Number threshold()  {
